--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- https://pixabay.com/videos/download/video-31377_tiny.mp4?attachment -->
     
     <div class="player">
-        <video src="https://pixabay.com/videos/download/video-31377_tiny.mp4?attachment" class="video" playsinline ></video>
+        <video src="Nature-31377.mp4" class="video" playsinline ></video>
         <!-- show controls -->
         <div class="show-controls">
             <!-- Controls Container -->
